# FanBoy

./: CMakeLists.txt  README.md
GameBoy/: CMakeLists.txt  GameBoy.cpp  GameBoy.h  Main.cpp
app/: CMakeLists.txt  Main.cpp
lib/: CmakeLists.txt
lib/imgui/: CMakeLists.txt
lib/nativefiledialog-cmake/: CMakeLists.txt
src/: CMakeLists.txt  CPU.cpp  CPU.h  GameBoy.cpp  GameBoy.h  Instructions.cpp  Joypad.cpp  Joypad.h  Main.cpp  Memory.cpp  Memory.h
src/CPU/: CPU.cpp  CPU.h  Flag.h  Interrupts.cpp  Interrupts.h  OpcodeCycles.h  OpcodeMappings.cpp  Opcodes.cpp  Opcodes.h  Register.h  Timer.cpp  Timer.h
src/Cartridge/: Cartridge.cpp  Cartridge.h  CartridgeFactory.cpp  CartridgeFactory.h  Header.h  MBC.cpp  MBC.h
src/Graphics/: PPU.cpp  PPU.h  PixelBuffer.cpp  PixelBuffer.h
src/Memory/: Memory.cpp  Memory.h
testing/: 16BitALUTest.cpp  8BitLoadTest.cpp  CMakeLists.txt  CPUTest.h  SampleTest.cpp
tests/: CMakeLists.txt
